--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,7 +59,8 @@ jobs:
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: deploy/main.bicep
         parameters: >
-          environmentType=${{ env.ENVIRONMENT_TYPE }}
+          -environmentType=${{ env.ENVIRONMENT_TYPE }}
+          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
         additionalArguments: --what-if
         
   deploy:
