--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,7 +38,9 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT_TYPE }}
+        parameters: >
+          -environmentType=${{ env.ENVIRONMENT_TYPE }}
+          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
         deploymentMode: Validate
 
   preview:
@@ -82,4 +84,6 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT_TYPE }}
+        parameters: >
+          -environmentType=${{ env.ENVIRONMENT_TYPE }}
+          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
