--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,9 +38,7 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: >
-          -environmentType=${{ env.ENVIRONMENT_TYPE }}
-          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
+        parameters: environmentType=${{ env.ENVIRONMENT_TYPE }} pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
         deploymentMode: Validate
 
   preview:
@@ -60,9 +58,7 @@ jobs:
         failOnStdErr: false
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: deploy/main.bicep
-        parameters: >
-          -environmentType=${{ env.ENVIRONMENT_TYPE }}
-          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
+        parameters: environmentType=${{ env.ENVIRONMENT_TYPE }} pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
         additionalArguments: --what-if
         
   deploy:
@@ -84,6 +80,4 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: >
-          -environmentType=${{ env.ENVIRONMENT_TYPE }}
-          -pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
+        parameters: environmentType=${{ env.ENVIRONMENT_TYPE }} pipelineServicePrincipalObjectId=${{ secrets.AZURE_CLIENT_ID }}
